# jetson_ros_code

./: .gitignore  COMPREHENSIVE_PLC_ANALYSIS.md  PLC_ANALYSIS_FRAMEWORK.md  ROBOT_HEALTH_STATUS_ANALYSIS.md  analyze_plc_program.py  diagnose_robot_health.py  extract_plc_logic.py  start_robot_dual.sh  start_ros2_robot.sh  test_plc_communication.py
ZEUS PLC PROGRAM/: PLC_ANALYSIS_RESULTS.json
ros1/arapl_ws/src/acr_robot_controller/: CMakeLists.txt  package.xml
ros1/arapl_ws/src/acr_robot_controller/config/: acr_robot_controller.yaml
ros1/arapl_ws/src/acr_robot_controller/include/acr_robot_controller/: AHighLevelController.h  Client.h  LowerLevelComputations.h  LowerLevelInterface.h  RoboteqController.h  RoboteqDevice.h  RosClass.h  Utilities.h
ros1/arapl_ws/src/acr_robot_controller/launch/: acr_robot_controller.launch
ros1/arapl_ws/src/acr_robot_controller/src/: LowerLevelComputations.cpp  LowerLevelInterface.cpp  RoboteqController.cpp  RoboteqDevice.cpp  RosClass.cpp
ros1/arapl_ws/src/acr_robot_controller/udev/: 99-roboteq.rules
ros1/arapl_ws/src/anscer_description/: CMakeLists.txt
ros1/arapl_ws/src/anscer_description/launch/: anscer_description.launch  anscer_description_qr.launch
ros1/arapl_ws/src/anscer_description/urdf/: agv_1250.urdf  anscer_amr.urdf
ros1/arapl_ws/src/anscer_msgs/: CMakeLists.txt  package.xml
ros1/arapl_ws/src/anscer_msgs/action/: Dock.action  Lift.action  Mission.action  NavigationServer.action  Transition.action
ros1/arapl_ws/src/anscer_msgs/action/Old/: Dock.action
ros1/arapl_ws/src/anscer_msgs/msg/: ACRControl.msg  BatteryDB.msg  BatteryInfo.msg  BatteryState.msg  ChargeInfo.msg  ControllerMode.msg  Debug.msg  Delay.msg  DockInfo.msg  DockingDebug.msg  Feedback.msg  FieldStatus.msg  Indication.msg  Info.msg  KeyValues.msg  MissionInfo.msg  MotorDiagnostics.msg  MotorDiagnosticsArray.msg  MotorFaultFlags.msg  MotorStatusFlags.msg  PGVPose.msg  Path.msg  Paths.msg  Pose.msg  ProximitySensors.msg  SafetyField.msg  SafetyFields.msg  SafetyZone.msg  ScanPoints.msg  Sequence.msg  StaticLidars.msg  Task.msg  Waypoint.msg  WaypointArray.msg  WaypointsArray.msg  ZoneInfo.msg  ZoneInformation.msg
ros1/arapl_ws/src/anscer_msgs/srv/: BatteryAnalytics.srv  BatteryManagement.srv  BoxFilter.srv  BumperOverride.srv  Buzzer.srv  ChargingControl.srv  ChargingOverride.srv  ClearZones.srv  ConfirmationButton.srv  DeleteMap.srv  DeleteWaypoint.srv  Distance.srv  Dock.srv  DynamicFootprint.srv  EditSequence.srv  EditWaypoint.srv  GetMapList.srv  GlobalPath.srv  InitCharging.srv  LiftControl.srv  MapReload.srv  MissionAnalytics.srv  NearestNode.srv  PausingFeedback.srv  ProhibitionZones.srv  RelayState.srv  Safety.srv  SafetyParam.srv  SafetySwitch.srv  SaveDelay.srv  SaveMap.srv  SavePose.srv  SaveStation.srv  SetZone.srv  ShelfReader.srv  Undock.srv  WaypointPose.srv  ZoneValues.srv
ros1/arapl_ws/src/emergency_handler/: CMakeLists.txt
ros1/arapl_ws/src/emergency_handler/include/: emergency_handler.h
ros1/arapl_ws/src/emergency_handler/launch/: emergency_handler.launch
ros1/arapl_ws/src/emergency_handler/src/: emergency_handler.cpp
ros1/arapl_ws/src/lower_level_controller/: CMakeLists.txt  package.xml
ros1/arapl_ws/src/lower_level_controller/config/: lower_level_controller.yaml  modbus_configuration.yaml  modbus_configuration.yaml.backup  odrive_configuration.yaml  rainbow_configuration.yaml  roboteq_configuration.yaml
ros1/arapl_ws/src/lower_level_controller/launch/: lower_level_controller.launch
ros1/arapl_ws/src/lower_level_controller/src/: .ModbusController.cpp.swm  .ModbusController.cpp.swn  .ModbusController.cpp.swo  LowerLevelComputations.cpp  LowerLevelInterface.cpp  ModbusController.cpp  ModbusDevice.cpp  RosClass.cpp
ros1/arapl_ws/src/navigation_speed_control/: CMakeLists.txt  package.xml
ros1/arapl_ws/src/navigation_speed_control/config/: navigation_speed_control.yaml
ros1/arapl_ws/src/navigation_speed_control/data/: BatteryManagement.db
ros1/arapl_ws/src/navigation_speed_control/launch/: navigation_speed_control.launch
ros1/arapl_ws/src/navigation_speed_control/src/: navigation_speed_control.cpp
ros1/arapl_ws/src/reader_modules/: CMakeLists.txt
ros1/arapl_ws/src/reader_modules/config/: pgv_reader.yaml  shelf_reader.yaml
ros1/arapl_ws/src/reader_modules/data/: .~lock.QR_DOTPATH_pt.csv#  045map.csv
ros1/arapl_ws/src/reader_modules/launch/: pgv_reader.launch
ros1/arapl_ws/src/reader_modules/src/: pgv_reader.cpp  shelf_reader.cpp
ros1/arapl_ws/src/wms_data/: CMakeLists.txt  package.xml
ros1/arapl_ws/src/wms_data/logs/: wms.logs
ros1/arapl_ws/src/wms_data/msg/: Feedback.msg
ros1/arapl_ws/src/wms_data/scripts/: check_env.py  log.txt  sql1.py  sql1_server.py  test_logging.py  wms_logger.py
ros2/arapl_ws/ros2_ws/src/acr_robot_controller/: CMakeLists.txt  README.md  package.xml
ros2/arapl_ws/ros2_ws/src/anscer_agv_bringup/: CMakeLists.txt  package.xml
ros2/arapl_ws/ros2_ws/src/anscer_description/: CMakeLists.txt
ros2/arapl_ws/ros2_ws/src/anscer_msgs/: CMakeLists.txt  README.md
ros2/arapl_ws/ros2_ws/src/anscer_teleop/: CMakeLists.txt  setup.py
ros2/arapl_ws/ros2_ws/src/brake_action/: CMakeLists.txt  README.cpp  package.xml
ros2/arapl_ws/ros2_ws/src/emergency_handler/: CMakeLists.txt  README.md
ros2/arapl_ws/ros2_ws/src/global_path_graph/: CMakeLists.txt
ros2/arapl_ws/ros2_ws/src/global_path_graph_planner/: CMakeLists.txt  package.xml
ros2/arapl_ws/ros2_ws/src/graph_control/: CMakeLists.txt  README.md
ros2/arapl_ws/ros2_ws/src/graph_creator/: CMakeLists.txt  README.md
ros2/arapl_ws/ros2_ws/src/graph_creator_msgs/: CMakeLists.txt  package.xml
ros2/arapl_ws/ros2_ws/src/graph_creator_rviz_plugin/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
ros2/arapl_ws/ros2_ws/src/graph_msgs/: CMakeLists.txt
ros2/arapl_ws/ros2_ws/src/graph_server/: CMakeLists.txt
ros2/arapl_ws/ros2_ws/src/graph_visual_control/: CMakeLists.txt
ros2/arapl_ws/ros2_ws/src/lift_action/: CMakeLists.txt
ros2/arapl_ws/ros2_ws/src/lower_level_controller/: .gitignore  CMakeLists.txt  README.md
(+3469 files in other folders)
