<?xml version="1.0"?>
<package format="2">
  <name>lower_level_controller</name>
  <version>0.0.0</version>
  <description>Responsible for collecting the command velocities and executes the corresponding motion,interacting with the peripheral attachment modules</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer>  " "-->
  <maintainer email="raj@anscer.com" >Raj Mohan </maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>anscer_msgs</depend>
  <depend>roslib</depend>
  <depend>actionlib</depend>
  <depend>wms_data</depend>
  <depend>lift_action</depend>

  
  

  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
