cmake_minimum_required(VERSION 3.8)
project(anscer_msgs)

# Find ROS 2 build dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)

# Find external message dependencies
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(action_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)

# List all Message (.msg) files
set(MESSAGES
  msg/ACRControl.msg
  msg/BatteryDB.msg
  msg/BatteryInfo.msg
  msg/BatteryState.msg
  msg/BumperState.msg
  msg/ChargeInfo.msg
  msg/ControllerMode.msg
  msg/Debug.msg
  msg/Delay.msg
  msg/DockInfo.msg
  msg/DockingDebug.msg
  msg/Feedback.msg
  msg/FieldStatus.msg
  msg/Indication.msg
  msg/IndividualProhibition.msg
  msg/Info.msg
  msg/KeyValue.msg
  msg/KeyValues.msg
  msg/MissionData.msg
  msg/MissionDB.msg
  msg/MissionInfo.msg
  msg/MissionStatus.msg
  msg/MotorDiagnostics.msg
  msg/MotorDiagnosticsArray.msg
  msg/MotorFaultFlags.msg
  msg/MotorStatusFlags.msg
  msg/Path.msg
  msg/Paths.msg
  msg/PGVPose.msg
  msg/Pose.msg
  msg/ProximitySensors.msg
  msg/SafetyField.msg
  msg/SafetyFields.msg
  msg/SafetyZone.msg
  msg/ScanPoint.msg
  msg/ScanPoints.msg
  msg/Sequence.msg
  msg/StaticLidar.msg
  msg/StaticLidars.msg
  msg/Task.msg
  msg/TransitionInfo.msg
  msg/TransitionZones.msg
  msg/Waypoint.msg
  msg/WaypointArray.msg
  msg/WaypointsArray.msg
  msg/ZoneInfo.msg
  msg/ZoneInformation.msg
  msg/ZonePoints.msg
)

# List all Service (.srv) files
set(SERVICES
  srv/ActivateSonar.srv
  srv/BatteryAnalytics.srv
  srv/BatteryManagement.srv
  srv/BoxFilter.srv
  srv/BumperOverride.srv
  srv/Buzzer.srv
  srv/CallMission.srv
  srv/ChargingControl.srv
  srv/ChargingOverride.srv
  srv/ClearZones.srv
  srv/ConfirmationButton.srv
  srv/DeleteMap.srv
  srv/DeleteWaypoint.srv
  srv/Distance.srv
  srv/Dock.srv
  srv/DynamicFootprint.srv
  srv/EditSequence.srv
  srv/EditWaypoint.srv
  srv/GetMapList.srv
  srv/GetMapName.srv
  srv/GetTransitionZones.srv
  srv/GlobalPath.srv
  srv/GoToPose.srv
  srv/HomeLocation.srv
  srv/InitCharging.srv
  srv/LiftControl.srv
  srv/LogCleaning.srv
  srv/MapCrop.srv
  srv/MapReload.srv
  srv/MissionAnalytics.srv
  srv/NearestNode.srv
  srv/PauseMission.srv
  srv/PausingFeedback.srv
  srv/ProhibitionZones.srv
  srv/RelayState.srv
  srv/ResumeMission.srv
  srv/Safety.srv
  srv/SafetyParam.srv
  srv/SafetySwitch.srv
  srv/SafetyZone.srv
  srv/SaveDelay.srv
  srv/SaveMap.srv
  srv/SavePose.srv
  srv/SaveStation.srv
  srv/SetZone.srv
  srv/ShelfReader.srv
  srv/SystemPower.srv
  srv/TripAnalytics.srv
  srv/Undock.srv
  srv/UserFeedback.srv
  srv/WaypointPose.srv
  srv/ZoneSpeed.srv
  srv/ZoneValues.srv
)

# List all Action (.action) files
set(ACTIONS
  action/ACRModule.action
  action/Charge.action
  action/Dock.action
  action/Error.action
  action/Lift.action
  action/Mission.action
  action/Move.action
  action/MultiMap.action
  action/NavigationServer.action
  action/Process.action
  action/Transition.action
  action/Wait.action
)

# Generate the C++/Python headers/bindings for all interfaces
rosidl_generate_interfaces(${PROJECT_NAME}
  ${MESSAGES}
  ${SERVICES}
  ${ACTIONS}
  DEPENDENCIES
  std_msgs
  geometry_msgs
  action_msgs
  builtin_interfaces
)

# Install files
install(
  DIRECTORY msg srv action
  DESTINATION share/${PROJECT_NAME}
)

# Export dependencies and includes
# ament_export_include_directories(msg)  # Not needed for ROS2 messages

ament_export_dependencies(
  rosidl_default_runtime
  std_msgs
  geometry_msgs
  action_msgs
  builtin_interfaces
)

ament_package()