<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brake_action</name>
  <version>1.0.0</version>
  <description>ROS2 communication node for PLC brake control using Modbus protocol</description>
  
  <maintainer email="baibhav.k@araplraas.com">Jishnu</maintainer>
  <license>Apache-2.0</license>
  
  <author email="baibhav.k@araplraas.com">Jishnu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
